docs/screenshots/0.16.0/README.md
# xezar 0.16.0 cockpit screenshots

Captured from a dry-run cockpit (`XEZ_DRY_RUN=1` with a sandboxed `XEZ_HOME`, no login, no network)
with fixture data: a demo project with tasks in every status on Claude Code, Codex and pi, a second
project for All tasks, three Inbox follow-ups, one automation and a second Claude login. The data,
the viewport and the theme are fixed, so a re-run produces the same pictures (at most a few
anti-aliased pixels apart).

Generated by `packages/web/e2e/capture/docs-screenshots.capture.ts` — this file too. Do not edit
it by hand; change `packages/web/e2e/capture/manifest.ts` and re-run the command.

## Reproduce

```bash
npm ci
npm run build
npm run capture:screenshots -w @qodeca/xezar-web
# one state only:
npm run capture:screenshots -w @qodeca/xezar-web -- -t tasks-list
```

The command boots the shared browser environment (`scripts/test-env-up.sh`, which provisions
agent-browser) and then its own fixture server. It is not part of `npm run test:e2e` or any gate.

## What is scripted, and what is rewritten

- **The agents are scripted.** The capture server runs the harness's own stand-ins for Claude Code,
  Codex and pi (`packages/web/e2e/capture/agents/`), not the bundled test mocks. Each seeded task
  plays its own turn through that backend's real protocol: its own tool calls and results, real
  edits in its worktree, its own token counts and references. The cockpit renders them as it would
  render a real agent; the screenshot in the running thread is a page the harness renders.
- **Values that differ on every run are rewritten** to fixed values right before each capture:
  ages, clock times and ISO timestamps (kept in order), run ids and `xez/<id8>` branch suffixes
  (one fixed value per task), and the temporary workspace path (shown as `~/code`, its sandboxed
  home as `~`). Layout is untouched.
- **The dry-run forge's stand-ins are rewritten** to the fixture repository's own GitHub remote:
  `mock/repo` reads `acme/demo-shop`, the author `mock` reads as a person, the fake draft
  PR URL reads as a PR on that repository, and a mocked agent's `mock (…)` version reads as a
  version number.
- Animations are stopped, and the floating toasts, backdrops and the thread's "Jump to latest"
  pill are hidden, so no capture lands on a random frame.
- The Tasks table folds Model, Cost, CPU and Mem; with every column open it is wider than 1280 px
  beside the sidebar and IN / OUT is cut off.
- The version chip is pinned to v0.16.0, the version these docs describe, not the
  pre-release build's own `package.json` version.
- A still larger than 300 KB would be re-encoded as an 8-bit palette PNG. The tour's streaming
  frames are sampled live, so their count can vary; their total time is fixed, and the tour runs
  at most 20 seconds.

## Files

| File | Shows | Theme | Viewport |
| --- | --- | --- | --- |
| [`tasks-list-dark-1280.png`](tasks-list-dark-1280.png) | Tasks overview with running, queued, review, done and failed tasks and a variant group | dark | 1280 × 800 |
| [`tasks-list-light-1280.png`](tasks-list-light-1280.png) | Tasks overview with running, queued, review, done and failed tasks and a variant group | light | 1280 × 800 |
| [`tasks-list-dark-375.png`](tasks-list-dark-375.png) | Tasks overview with running, queued, review, done and failed tasks and a variant group | dark | 375 × 812 |
| [`tasks-list-light-375.png`](tasks-list-light-375.png) | Tasks overview with running, queued, review, done and failed tasks and a variant group | light | 375 × 812 |
| [`task-thread-dark-1280.png`](task-thread-dark-1280.png) | A running task thread: earlier tool calls opened, command output, the screenshot the agent took, and a test run in progress | dark | 1280 × 800 |
| [`task-thread-light-1280.png`](task-thread-light-1280.png) | A running task thread: earlier tool calls opened, command output, the screenshot the agent took, and a test run in progress | light | 1280 × 800 |
| [`task-thread-dark-375.png`](task-thread-dark-375.png) | A running task thread: earlier tool calls opened, command output, the screenshot the agent took, and a test run in progress | dark | 375 × 812 |
| [`task-thread-light-375.png`](task-thread-light-375.png) | A running task thread: earlier tool calls opened, command output, the screenshot the agent took, and a test run in progress | light | 375 × 812 |
| [`task-changes-dark-1280.png`](task-changes-dark-1280.png) | The Changes tab of a task with a multi-file diff | dark | 1280 × 800 |
| [`task-changes-light-1280.png`](task-changes-light-1280.png) | The Changes tab of a task with a multi-file diff | light | 1280 × 800 |
| [`compare-variants-dark-1280.png`](compare-variants-dark-1280.png) | Two variants of one task that took different approaches, side by side | dark | 1280 × 800 |
| [`compare-variants-light-1280.png`](compare-variants-light-1280.png) | Two variants of one task that took different approaches, side by side | light | 1280 × 800 |
| [`new-task-dark-1280.png`](new-task-dark-1280.png) | The new-task composer: Worktree on and Autonomous visible; at 1280 the workflow picker is open too | dark | 1280 × 800 |
| [`new-task-light-1280.png`](new-task-light-1280.png) | The new-task composer: Worktree on and Autonomous visible; at 1280 the workflow picker is open too | light | 1280 × 800 |
| [`new-task-dark-375.png`](new-task-dark-375.png) | The new-task composer: Worktree on and Autonomous visible; at 1280 the workflow picker is open too | dark | 375 × 812 |
| [`review-gate-dark-1280.png`](review-gate-dark-1280.png) | A task parked at review with the review panel and the Draft PR action | dark | 1280 × 800 |
| [`all-tasks-dark-1280.png`](all-tasks-dark-1280.png) | All tasks across two projects, grouped | dark | 1280 × 800 |
| [`all-tasks-light-1280.png`](all-tasks-light-1280.png) | All tasks across two projects, grouped | light | 1280 × 800 |
| [`repo-git-dark-1280.png`](repo-git-dark-1280.png) | The repository Git view: the branch, its GitHub remote and the commit history | dark | 1280 × 800 |
| [`github-issues-dark-1280.png`](github-issues-dark-1280.png) | GitHub issues with the hand-to-agent controls | dark | 1280 × 800 |
| [`github-issues-light-1280.png`](github-issues-light-1280.png) | GitHub issues with the hand-to-agent controls | light | 1280 × 800 |
| [`automations-dark-1280.png`](automations-dark-1280.png) | Automations: a scheduled GitHub watch that starts a task for new issues | dark | 1280 × 800 |
| [`inbox-dark-1280.png`](inbox-dark-1280.png) | The follow-up Inbox with three entries | dark | 1280 × 800 |
| [`inbox-light-1280.png`](inbox-light-1280.png) | The follow-up Inbox with three entries | light | 1280 × 800 |
| [`skills-dark-1280.png`](skills-dark-1280.png) | Skills with a skill preview open | dark | 1280 × 800 |
| [`skills-light-1280.png`](skills-light-1280.png) | Skills with a skill preview open | light | 1280 × 800 |
| [`workflows-dark-1280.png`](workflows-dark-1280.png) | The workflow builder with a multi-step workflow | dark | 1280 × 800 |
| [`workflows-light-1280.png`](workflows-light-1280.png) | The workflow builder with a multi-step workflow | light | 1280 × 800 |
| [`settings-appearance-roomy-dark-1280.png`](settings-appearance-roomy-dark-1280.png) | Settings → Appearance with the Roomy density selected | dark | 1280 × 800 |
| [`settings-appearance-roomy-light-1280.png`](settings-appearance-roomy-light-1280.png) | Settings → Appearance with the Roomy density selected | light | 1280 × 800 |
| [`settings-appearance-roomy-dark-375.png`](settings-appearance-roomy-dark-375.png) | Settings → Appearance with the Roomy density selected | dark | 375 × 812 |
| [`settings-agents-dark-1280.png`](settings-agents-dark-1280.png) | Project Settings → Agents | dark | 1280 × 800 |
| [`settings-accounts-dark-1280.png`](settings-accounts-dark-1280.png) | Global Settings → Agent accounts | dark | 1280 × 800 |
| [`settings-resources-dark-1280.png`](settings-resources-dark-1280.png) | Global Settings → Resources: parallel tasks, monitoring sessions and limits | dark | 1280 × 800 |
| [`settings-mcp-connection-dark-1280.png`](settings-mcp-connection-dark-1280.png) | Project Settings → MCP connection with the leader status | dark | 1280 × 800 |
| [`command-palette-dark-1280.png`](command-palette-dark-1280.png) | The ⌘K command palette open | dark | 1280 × 800 |
| [`settings-projects-dark-1280.png`](settings-projects-dark-1280.png) | Global Settings → Projects: the registered-projects table; at 375 px, columns extend beyond the right edge (known gap G-30) | dark | 1280 × 800 |
| [`settings-projects-light-1280.png`](settings-projects-light-1280.png) | Global Settings → Projects: the registered-projects table; at 375 px, columns extend beyond the right edge (known gap G-30) | light | 1280 × 800 |
| [`settings-projects-dark-375.png`](settings-projects-dark-375.png) | Global Settings → Projects: the registered-projects table; at 375 px, columns extend beyond the right edge (known gap G-30) | dark | 375 × 812 |
| [`tour.gif`](tour.gif) | A tour: the task list, a new task typed and started, the running thread, review, a draft PR, and the list again | dark | 1280 × 800 |
